added few more images to db

--- a/CafeProject/Cafe/templates/Cafe/menuCafe.html
+++ b/CafeProject/Cafe/templates/Cafe/menuCafe.html
@@ -166,7 +166,8 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <th width="70"># Left</th>
+      <th width="70">Stock</th>
+      <th></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -178,7 +179,7 @@
     <div style="display:none" id="biscuit_id{{ forloop.counter }}">{{ biscuit.id }}</div>
     <tr>
         <td><span id="biscuit_inventory{{ forloop.counter }}" class="badge">{{ biscuit.inventory }}</span></td>
-        <td id = "chip_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ biscuit.photo.url }}"></img></td>
+        <td id = "biscuit_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ biscuit.photo.url }}"></img></td>
         <td id="biscuit_name{{ forloop.counter }}">{{ biscuit.name }}</td>
         <td id="biscuit_price{{ forloop.counter }}" align="right">{{ biscuit.price }}</td>
         <td><div class="input-group">
@@ -200,7 +201,8 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <th width="70"># Left</th>
+      <th width="70">Stock</th>
+      <th></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -212,7 +214,7 @@
     <div style="display:none" id="chocolate_id{{ forloop.counter }}">{{ chocolate.id }}</div>
     <tr>
         <td><span id="chocolate_inventory{{ forloop.counter }}" class="badge">{{ chocolate.inventory }}</span></td>
-        <td id = "chip_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ chocolate.photo.url }}"></img></td>
+        <td id = "chocolate_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ chocolate.photo.url }}"></img></td>
         <td id="chocolate_name{{ forloop.counter }}" >{{ chocolate.name }}</td>
         <td id="chocolate_price{{ forloop.counter }}" align="right">{{ chocolate.price }}</td>
         <td><div class="input-group">
@@ -234,7 +236,8 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <th width="70"># Left</th>
+      <th width="70">Stock</th>
+      <th></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -246,7 +249,7 @@
     <div style="display:none" id="heatneat_id{{ forloop.counter }}">{{ heatneat.id }}</div>
     <tr>
         <td><span id="heatneat_inventory{{ forloop.counter }}" class="badge">{{ heatneat.inventory }}</span></td>
-        <td id = "chip_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ heatneat.photo.url }}"></img></td>
+        <td id = "heatneat_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ heatneat.photo.url }}"></img></td>
         <td id="heatneat_name{{ forloop.counter }}" >{{ heatneat.name }}</td>
         <td id="heatneat_price{{ forloop.counter }}"  align="right">{{ heatneat.price }}</td>
         <td><div class="input-group">
@@ -269,7 +272,8 @@
   <table class="table table-hover">
   <thead>
     <tr>
-      <th width="70"># Left</th>
+      <th width="70">Stock</th>
+      <th></th>
       <th width="500">Item Name</th>
       <th width="150">Price <span class="WebRupee">&#x20B9;</span></th>
       <th width="100">Quantity</th>
@@ -281,7 +285,7 @@
     <div style="display:none" id="beverage_id{{ forloop.counter }}">{{ beverage.id }}</div>
     <tr>
         <td><span id="beverage_inventory{{ forloop.counter }}" class="badge">{{ beverage.inventory }}</span></td>
-        <td id = "chip_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ beverage.photo.url }}"></img></td>
+        <td id = "beverage_photo{{ forloop.counter }}"><img width=100 height=100 src="{{ beverage.photo.url }}"></img></td>
         <td id="beverage_name{{ forloop.counter }}">{{ beverage.name }}</td>
         <td id="beverage_price{{ forloop.counter }}" align="right">{{ beverage.price }}</td>
         <td><div class="input-group">
